--- a/src/components/palette/palette.scss
+++ b/src/components/palette/palette.scss
@@ -43,8 +43,6 @@
     }
 }
 
-// .chrome-picker {
-//     position: absolute;
-//     top: 20%;
-//     left: 10%;
-// }
+.chrome-picker.chrome-picker {
+    width: 100% !important;
+}
